move rigidbody_constraint.c, rigidbody_object.c and rigidbody_world.c

--- a/source/blender/editors/physics/CMakeLists.txt
+++ b/source/blender/editors/physics/CMakeLists.txt
@@ -31,9 +31,9 @@ set(SRC
   physics_fluid.cc
   physics_ops.cc
   physics_pointcache.cc
-  rigidbody_constraint.c
-  rigidbody_object.c
-  rigidbody_world.c
+  rigidbody_constraint.cc
+  rigidbody_object.cc
+  rigidbody_world.cc
 
   particle_edit_utildefines.h
   physics_intern.h
