--- a/source/blender/editors/space_file/CMakeLists.txt
+++ b/source/blender/editors/space_file/CMakeLists.txt
@@ -33,7 +33,7 @@ set(SRC
   asset_catalog_tree_view.cc
   file_draw.cc
   file_indexer.cc
-  file_ops.c
+  file_ops.cc
   file_panels.c
   file_utils.c
   filelist.cc
