move graph_view.c

--- a/source/blender/editors/space_graph/CMakeLists.txt
+++ b/source/blender/editors/space_graph/CMakeLists.txt
@@ -32,7 +32,7 @@ set(SRC
   graph_select.cc
   graph_slider_ops.cc
   graph_utils.cc
-  graph_view.c
+  graph_view.cc
   space_graph.c
 
   graph_intern.h
