move image_ops.c

--- a/source/blender/editors/space_image/CMakeLists.txt
+++ b/source/blender/editors/space_image/CMakeLists.txt
@@ -34,7 +34,7 @@ set(SRC
   image_buttons.cc
   image_draw.cc
   image_edit.cc
-  image_ops.c
+  image_ops.cc
   image_sequence.c
   image_undo.cc
   space_image.c
