--- a/source/blender/editors/interface/CMakeLists.txt
+++ b/source/blender/editors/interface/CMakeLists.txt
@@ -7,7 +7,6 @@ set(INC
   ../include
   ../../asset_system
   ../../blenfont
-  ../../blenkernel
   ../../blenloader
   ../../blentranslation
   ../../depsgraph
@@ -94,7 +93,7 @@ set(SRC
 )
 
 set(LIB
-  bf_blenkernel
+  PRIVATE bf::blenkernel
   PRIVATE bf::blenlib
   PRIVATE bf::dna
   bf_editor_datafiles
