Cleanup: CMake: Modernize bf_windowmanager dependencies
Pretty straightforward

- Remove any windowmanager paths from INC
- Add a dependency though LIB

context: https://devtalk.blender.org/t/cmake-cleanup/30260

--- a/source/blender/io/gpencil/CMakeLists.txt
+++ b/source/blender/io/gpencil/CMakeLists.txt
@@ -10,7 +10,6 @@ set(INC
   ../../depsgraph
   ../../editors/include
   ../../makesrna
-  ../../windowmanager
   ../../../../intern/clog
   ../../../../intern/utfconv
   ../../../../extern/nanosvg
@@ -41,6 +40,7 @@ set(LIB
   PRIVATE bf::dna
   PRIVATE bf::intern::guardedalloc
   bf_io_common
+  PRIVATE bf::windowmanager
 )
 
 if(WITH_PUGIXML)
