--- a/source/blender/editors/space_outliner/CMakeLists.txt
+++ b/source/blender/editors/space_outliner/CMakeLists.txt
@@ -49,6 +49,7 @@ set(SRC
   tree/tree_element_anim_data.cc
   tree/tree_element_bone.cc
   tree/tree_element_collection.cc
+  tree/tree_element_defgroup.cc
   tree/tree_element_driver.cc
   tree/tree_element_edit_bone.cc
   tree/tree_element_gpencil_layer.cc
@@ -80,6 +81,7 @@ set(SRC
   tree/tree_element_anim_data.hh
   tree/tree_element_bone.hh
   tree/tree_element_collection.hh
+  tree/tree_element_defgroup.hh
   tree/tree_element_driver.hh
   tree/tree_element_edit_bone.hh
   tree/tree_element_gpencil_layer.hh
