--- a/source/blender/editors/space_view3d/CMakeLists.txt
+++ b/source/blender/editors/space_view3d/CMakeLists.txt
@@ -28,7 +28,7 @@ set(INC_SYS
 set(SRC
   drawobject.cc
   space_view3d.cc
-  view3d_buttons.c
+  view3d_buttons.cc
   view3d_camera_control.c
   view3d_cursor_snap.c
   view3d_draw.cc
