move view3d_camera_control.c

--- a/source/blender/editors/space_view3d/CMakeLists.txt
+++ b/source/blender/editors/space_view3d/CMakeLists.txt
@@ -29,7 +29,7 @@ set(SRC
   drawobject.cc
   space_view3d.cc
   view3d_buttons.cc
-  view3d_camera_control.c
+  view3d_camera_control.cc
   view3d_cursor_snap.c
   view3d_draw.cc
   view3d_edit.c
