--- a/source/blender/editors/space_view3d/CMakeLists.txt
+++ b/source/blender/editors/space_view3d/CMakeLists.txt
@@ -32,7 +32,7 @@ set(SRC
   view3d_camera_control.cc
   view3d_cursor_snap.cc
   view3d_draw.cc
-  view3d_edit.c
+  view3d_edit.cc
   view3d_gizmo_armature.c
   view3d_gizmo_camera.c
   view3d_gizmo_empty.c
