move view3d_gizmo_camera.c

--- a/source/blender/editors/space_view3d/CMakeLists.txt
+++ b/source/blender/editors/space_view3d/CMakeLists.txt
@@ -34,7 +34,7 @@ set(SRC
   view3d_draw.cc
   view3d_edit.cc
   view3d_gizmo_armature.cc
-  view3d_gizmo_camera.c
+  view3d_gizmo_camera.cc
   view3d_gizmo_empty.c
   view3d_gizmo_forcefield.c
   view3d_gizmo_light.c
