--- a/source/blender/editors/space_view3d/CMakeLists.txt
+++ b/source/blender/editors/space_view3d/CMakeLists.txt
@@ -36,7 +36,7 @@ set(SRC
   view3d_gizmo_armature.cc
   view3d_gizmo_camera.cc
   view3d_gizmo_empty.cc
-  view3d_gizmo_forcefield.c
+  view3d_gizmo_forcefield.cc
   view3d_gizmo_light.c
   view3d_gizmo_navigate.c
   view3d_gizmo_navigate_type.c
