--- a/source/blender/editors/space_view3d/CMakeLists.txt
+++ b/source/blender/editors/space_view3d/CMakeLists.txt
@@ -37,7 +37,7 @@ set(SRC
   view3d_gizmo_camera.cc
   view3d_gizmo_empty.cc
   view3d_gizmo_forcefield.cc
-  view3d_gizmo_light.c
+  view3d_gizmo_light.cc
   view3d_gizmo_navigate.c
   view3d_gizmo_navigate_type.c
   view3d_gizmo_preselect.c
