--- a/source/blender/editors/space_view3d/CMakeLists.txt
+++ b/source/blender/editors/space_view3d/CMakeLists.txt
@@ -38,7 +38,7 @@ set(SRC
   view3d_gizmo_empty.cc
   view3d_gizmo_forcefield.cc
   view3d_gizmo_light.cc
-  view3d_gizmo_navigate.c
+  view3d_gizmo_navigate.cc
   view3d_gizmo_navigate_type.cc
   view3d_gizmo_preselect.c
   view3d_gizmo_preselect_type.cc
