--- a/source/blender/editors/space_view3d/CMakeLists.txt
+++ b/source/blender/editors/space_view3d/CMakeLists.txt
@@ -43,7 +43,7 @@ set(SRC
   view3d_gizmo_preselect.cc
   view3d_gizmo_preselect_type.cc
   view3d_gizmo_ruler.cc
-  view3d_gizmo_tool_generic.c
+  view3d_gizmo_tool_generic.cc
   view3d_header.c
   view3d_iterators.cc
   view3d_navigate.cc
