move view3d_snap.c

--- a/source/blender/editors/space_view3d/CMakeLists.txt
+++ b/source/blender/editors/space_view3d/CMakeLists.txt
@@ -61,7 +61,7 @@ set(SRC
   view3d_placement.cc
   view3d_project.cc
   view3d_select.cc
-  view3d_snap.c
+  view3d_snap.cc
   view3d_utils.c
   view3d_view.cc
 
