move view3d_utils.c

--- a/source/blender/editors/space_view3d/CMakeLists.txt
+++ b/source/blender/editors/space_view3d/CMakeLists.txt
@@ -62,7 +62,7 @@ set(SRC
   view3d_project.cc
   view3d_select.cc
   view3d_snap.cc
-  view3d_utils.c
+  view3d_utils.cc
   view3d_view.cc
 
   view3d_intern.h
