--- a/source/blender/render/hydra/CMakeLists.txt
+++ b/source/blender/render/hydra/CMakeLists.txt
@@ -39,6 +39,7 @@ set(INC
 
 set(INC_SYS
   ${PYTHON_INCLUDE_DIRS}
+  ${Epoxy_INCLUDE_DIRS}
   ${USD_INCLUDE_DIRS}
   ${BOOST_INCLUDE_DIR}
   ${TBB_INCLUDE_DIR}
