move transform_convert_lattice.c

--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -31,7 +31,7 @@ set(SRC
   transform_convert_curves.cc
   transform_convert_gpencil_legacy.cc
   transform_convert_graph.cc
-  transform_convert_lattice.c
+  transform_convert_lattice.cc
   transform_convert_mask.c
   transform_convert_mball.c
   transform_convert_mesh.c
