move transform_convert_mesh_edge.c

--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -35,7 +35,7 @@ set(SRC
   transform_convert_mask.cc
   transform_convert_mball.cc
   transform_convert_mesh.c
-  transform_convert_mesh_edge.c
+  transform_convert_mesh_edge.cc
   transform_convert_mesh_skin.c
   transform_convert_mesh_uv.c
   transform_convert_mesh_vert_cdata.c
