--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -38,7 +38,7 @@ set(SRC
   transform_convert_mesh_edge.cc
   transform_convert_mesh_skin.cc
   transform_convert_mesh_uv.cc
-  transform_convert_mesh_vert_cdata.c
+  transform_convert_mesh_vert_cdata.cc
   transform_convert_nla.c
   transform_convert_node.cc
   transform_convert_object.c
