--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -34,7 +34,7 @@ set(SRC
   transform_convert_lattice.cc
   transform_convert_mask.cc
   transform_convert_mball.cc
-  transform_convert_mesh.c
+  transform_convert_mesh.cc
   transform_convert_mesh_edge.cc
   transform_convert_mesh_skin.cc
   transform_convert_mesh_uv.cc
