--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -41,7 +41,7 @@ set(SRC
   transform_convert_mesh_vert_cdata.cc
   transform_convert_nla.cc
   transform_convert_node.cc
-  transform_convert_object.c
+  transform_convert_object.cc
   transform_convert_object_texspace.cc
   transform_convert_paintcurve.c
   transform_convert_particle.c
