--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -46,7 +46,7 @@ set(SRC
   transform_convert_paintcurve.cc
   transform_convert_particle.cc
   transform_convert_sculpt.cc
-  transform_convert_sequencer.c
+  transform_convert_sequencer.cc
   transform_convert_sequencer_image.cc
   transform_convert_tracking.c
   transform_convert_tracking_curves.c
