move transform_generics.c

--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -51,7 +51,7 @@ set(SRC
   transform_convert_tracking.cc
   transform_convert_tracking_curves.cc
   transform_draw_cursors.cc
-  transform_generics.c
+  transform_generics.cc
   transform_gizmo_2d.c
   transform_gizmo_3d.cc
   transform_gizmo_3d_cage.cc
