move transform_input.c

--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -57,7 +57,7 @@ set(SRC
   transform_gizmo_3d_cage.cc
   transform_gizmo_3d_shear.cc
   transform_gizmo_extrude_3d.c
-  transform_input.c
+  transform_input.cc
   transform_mode.c
   transform_mode_align.c
   transform_mode_baketime.c
