move transform_mode_maskshrinkfatten.c

--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -72,7 +72,7 @@ set(SRC
   transform_mode_edge_slide.cc
   transform_mode_gpopacity.cc
   transform_mode_gpshrinkfatten.cc
-  transform_mode_maskshrinkfatten.c
+  transform_mode_maskshrinkfatten.cc
   transform_mode_mirror.c
   transform_mode_push_pull.c
   transform_mode_resize.c
