move transform_mode_resize.c

--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -75,7 +75,7 @@ set(SRC
   transform_mode_maskshrinkfatten.cc
   transform_mode_mirror.cc
   transform_mode_push_pull.cc
-  transform_mode_resize.c
+  transform_mode_resize.cc
   transform_mode_rotate.c
   transform_mode_shear.c
   transform_mode_shrink_fatten.c
