move transform_mode_shrink_fatten.c

--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -78,7 +78,7 @@ set(SRC
   transform_mode_resize.cc
   transform_mode_rotate.cc
   transform_mode_shear.cc
-  transform_mode_shrink_fatten.c
+  transform_mode_shrink_fatten.cc
   transform_mode_skin_resize.c
   transform_mode_snapsource.c
   transform_mode_tilt.c
