move transform_mode_tosphere.c

--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -85,7 +85,7 @@ set(SRC
   transform_mode_timescale.cc
   transform_mode_timeslide.cc
   transform_mode_timetranslate.cc
-  transform_mode_tosphere.c
+  transform_mode_tosphere.cc
   transform_mode_trackball.c
   transform_mode_translate.c
   transform_mode_vert_slide.c
