move transform_ops.c

--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -89,7 +89,7 @@ set(SRC
   transform_mode_trackball.cc
   transform_mode_translate.cc
   transform_mode_vert_slide.cc
-  transform_ops.c
+  transform_ops.cc
   transform_orientations.c
   transform_snap.cc
   transform_snap_animation.c
