move transform_orientations.c

--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -90,7 +90,7 @@ set(SRC
   transform_mode_translate.cc
   transform_mode_vert_slide.cc
   transform_ops.cc
-  transform_orientations.c
+  transform_orientations.cc
   transform_snap.cc
   transform_snap_animation.c
   transform_snap_object.cc
