Fix various build issues and warnings on Linux
* Fix build when WITH_USD and WITH_MATERIALX are disabled
* Link issue with mixed Clang and GCC libs
* Unused arguments
* Different integer printf types on Windows and Linux

Pull Request #63

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -931,6 +931,9 @@ set_and_warn_dependency(WITH_IMAGE_OPENEXR WITH_OPENVDB OFF)
 set_and_warn_dependency(WITH_IMAGE_OPENEXR WITH_ALEMBIC OFF)
 set_and_warn_dependency(WITH_IMAGE_OPENEXR WITH_CYCLES_OSL OFF)
 
+# Hydra requires USD.
+set_and_warn_dependency(WITH_USD WITH_HYDRA OFF)
+
 # auto enable openimageio for cycles
 if(WITH_CYCLES)
   # auto enable llvm for cycles_osl
