move anim_sys.c

--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -58,7 +58,7 @@ set(SRC
   intern/addon.cc
   intern/anim_data.cc
   intern/anim_path.cc
-  intern/anim_sys.c
+  intern/anim_sys.cc
   intern/anim_visualization.c
   intern/anonymous_attribute_id.cc
   intern/appdir.c
