--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -62,7 +62,7 @@ set(SRC
   intern/anim_visualization.cc
   intern/anonymous_attribute_id.cc
   intern/appdir.cc
-  intern/armature.c
+  intern/armature.cc
   intern/armature_deform.cc
   intern/armature_pose.cc
   intern/armature_selection.cc
