--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -49,7 +49,7 @@ set(INC_SYS
 set(SRC
   ${CMAKE_SOURCE_DIR}/release/datafiles/userdef/userdef_default.c
   intern/CCGSubSurf.c
-  intern/CCGSubSurf_legacy.c
+  intern/CCGSubSurf_legacy.cc
   intern/CCGSubSurf_util.c
   intern/DerivedMesh.cc
   intern/action.cc
