move curve_convert.c

--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -102,7 +102,7 @@ set(SRC
   intern/curve_bevel.cc
   intern/curve_bezier.cc
   intern/curve_catmull_rom.cc
-  intern/curve_convert.c
+  intern/curve_convert.cc
   intern/curve_decimate.c
   intern/curve_deform.c
   intern/curve_legacy_convert.cc
