--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -129,7 +129,7 @@ set(SRC
   intern/fcurve_cache.cc
   intern/fcurve_driver.cc
   intern/fluid.cc
-  intern/fmodifier.c
+  intern/fmodifier.cc
   intern/freestyle.c
   intern/geometry_component_curves.cc
   intern/geometry_component_edit_data.cc
