move gpencil_modifier_legacy.c

--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -143,7 +143,7 @@ set(SRC
   intern/gpencil_curve_legacy.cc
   intern/gpencil_geom_legacy.cc
   intern/gpencil_legacy.cc
-  intern/gpencil_modifier_legacy.c
+  intern/gpencil_modifier_legacy.cc
   intern/gpencil_update_cache_legacy.c
   intern/grease_pencil.cc
   intern/grease_pencil_convert_legacy.cc
