move image_gen.c

--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -156,7 +156,7 @@ set(SRC
   intern/idtype.cc
   intern/image.cc
   intern/image_format.cc
-  intern/image_gen.c
+  intern/image_gen.cc
   intern/image_gpu.cc
   intern/image_partial_update.cc
   intern/image_save.cc
